frontend/build_realtime.log

> adhders-app@1.0.0 build:web
> npx expo export -p web --output-dir build && cp -r public/* build/ && cp -r build ../

env: load .env
env: export EXPO_PUBLIC_BACKEND_URL REACT_APP_BACKEND_URL
Starting Metro Bundler
Static rendering is enabled. Learn more: https://docs.expo.dev/router/reference/static-rendering/
[Reanimated] Seems like you are using a Babel plugin `react-native-reanimated/plugin`. It was moved to `react-native-worklets` package. Please use `react-native-worklets/plugin` instead.
Web node_modules/expo-router/entry.js ▓▓▓▓▓▓▓░░░░░░░░░ 46.5% (582/909)
λ node_modules/expo-router/node/render.js ▓▓▓▓▓▓▓▓▓▓▓░░░░░ 69.5% ( 936/1123)
λ Bundling failed 4398ms node_modules/expo-router/node/render.js (1720 modules)
SyntaxError: Error: /app/frontend/src/context/RuntimeConfigContext.tsx: Unexpected token, expected "," (316:0)

  314 | }
  315 |
> 316 | export function useRuntimeConfig() {
      | ^
  317 |   const ctx = useContext(Ctx);
  318 |   if (!ctx) throw new Error("useRuntimeConfig must be used within RuntimeConfigProvider");
  319 |   return ctx;
